--- a/main.html
+++ b/main.html
@@ -8,5 +8,6 @@
 <body>
 <h1>This is an Test Website</h1>
 <button type="button" class="btn btn-primary">Primary</button>
+<button> Click Me </button>
 </body>
 </html>
